2015-05-20  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/set.m: Fix stk_error calls (missing mnemonic)

	* arrays/@stk_dataframe/set.m: Fix stk_error calls (missing mnemonic)

	stk_param_estim.m: Make sure that lnv0 falls within the bounds

	* paramestim/stk_param_estim.m (get_default_bounds_lnv): Make sure
	that lnv0 falls within the bounds returned by get_default_bounds_lnv.

2015-05-19  Julien Bect  <julien.bect@supelec.fr>

	stk_optim_hasfmincon.m: Improve fmincon detection

	* misc/optim/stk_optim_hasfmincon.m: Try to use fmincon to check
	that it is there, instead of relying on the result of the exist
	function (closes ticket #30).

2015-05-17  Julien Bect  <julien.bect@supelec.fr>

	admin/octpkg/Makefile: Use $(MKOCTFILE) if defined

	* admin/octpkg/Makefile: Use $(MKOCTFILE) if defined

	stk_runtests.m: Make sure that all Octave warnings are disabled

	* misc/test/stk_runtests.m: Make sure that all Octave warnings are
	disabled

	Fix %!shared blocks in unit tests.

	* arrays/@stk_hrect/stk_normalize.m: Fix unit test.
	* arrays/generic/stk_feval.m: Fix unit test.

2015-04-22  Julien Bect  <julien.bect@supelec.fr>

	Improve indexing (subasgn/subsref) for stk_dataframe objects.

	* arrays/@stk_dataframe/subsasgn.m: Preserve row names and column
	names when it is possible (closes ticket #21).
	* arrays/@stk_dataframe/subsref.m: Allow for several levels of
	indexing in the case of ()-indexing.

	stk_dataframe.m: Add help text

	* arrays/@stk_dataframe/stk_dataframe.m: Add help text (closes
	ticket #26).

2015-04-21  Julien Bect  <julien.bect@supelec.fr>

	stk_hrect.m: Add help text

	* arrays/@stk_hrect/stk_hrect.m: Add help text (closes ticket #27).

2015-04-20  Julien Bect  <julien.bect@supelec.fr>

	stk_boundingbox.m: Add doc and overload for several classes (ticket #28)

	* arrays/generic/stk_boundingbox.m: Add doc. Handle plain arrays only.
	* arrays/@stk_dataframe/stk_boundingbox.m: Overload.